--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <head> 
 <title>TYPENERD | SERVICES</title> 
 </head> 
-<body> 
-<h1>TypeNerd Web Services</h1> 
-Find Us <a href=”https://typenerd.tumblr.com/”> Here</a> 
+<body>
+  <p></p>
+  <center><h1>TypeNerd Web Services</h1></center>
+  <p></p>
+  <p></p>
+  <center><h3>Find Us <a href=”https://typenerd.tumblr.com/”> Here</a></h3></center>
 
 </body> 
 </html>
