--- a/typenerd_services.html
+++ b/typenerd_services.html
@@ -15,7 +15,6 @@
 body {
   font-family: "Montserrat", Helvetica, Arial;
   font-weight:300;
-  
 }
 
 img {
@@ -105,7 +104,6 @@ img {
   color: #ff4703;
   font-weight: 600;
 }
-
 
 .loading {
   position: fixed;
@@ -229,7 +227,7 @@ img {
     <p>Nominee, 2017 Pushcart Prize for Poetry, Monroe at the Charity Show/On Morning</p>
   </section>
 <!-- Contact Page -->
-  <section data-page-name="contact" class="page" id="email">
+  <section data-page-name="contact" class="page" id="email" style="text-align: center;">
   <p>For any &amp; all inquiries, please feel free to message me below.</p>
 <p><a href="mailto:phuk.yoo@protonmail.com/">em@il me</a></p>
     <p></p>
