--- a/typenerd_services.html
+++ b/typenerd_services.html
@@ -88,8 +88,7 @@ img {
   font-weight: 600;
 }
 
-
-.page {
+ .page {
   max-width: 980px;
   padding: 0 20px;
   margin: 75px auto;
@@ -138,6 +137,12 @@ img {
   margin: 20px 0 0;
 }
 
+#email {
+  font-size: 2vw;
+  font-weight: 400;
+  padding: 5px 0;
+  text-align: center;
+} 
 ::-webkit-scrollbar { 
   /* This is the magic bit */
   display: none;
@@ -227,8 +232,8 @@ img {
     <p>Nominee, 2017 Pushcart Prize for Poetry, Monroe at the Charity Show/On Morning</p>
   </section>
 <!-- Contact Page -->
-  <section data-page-name="contact" class="page" id="email" style="text-align: center;">
-  <p>For any &amp; all inquiries, please feel free to message me below.</p>
+  <section data-page-name="contact" class="page" id="email">
+  <p>For any &amp; all inquiries, please feel free to contact me below.</p>
 <p><a href="mailto:phuk.yoo@protonmail.com/">em@il me</a></p>
     <p></p>
   </section>
