--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ img {
 
 <body>
 <!-- Header -->
-  <h1 class="title">Type Nerd</h1>
+  <h1 class="title">TypeNerd</h1>
   <img class="profile-img" src="https://i.postimg.cc/LXXHmN7z/typenerd-Logo-Profile2.png" alt="TypeNerd" />
   <span class="tagline">Codegeek | Typenerd</span>
   <nav class="main-nav">
@@ -240,7 +240,7 @@ img {
 
   <!-- Loading -->
   <div class="loading">
-    <h1 class="loading-title">loading</h1>
+    <h1 class="loading-title">welcome!</h1>
     <div class="loading-progress"></div>
   </div>
   
