--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@ img {
 }
 
 #email {
-  font-size: 2vw;
-  font-weight: 400;
+  font-size: 1.6vw;
+  font-weight: 300;
   padding: 5px 0;
   text-align: center;
 } 
@@ -194,7 +194,7 @@ img {
   <section data-page-name="about" class="page default">
 
     <div class="about-me">
-      <p>TypeNerd is completing an MFA at the University of South Florida, where she writes nonfiction, poetry, and comics. Her work has been published in Brevity, New Delta Review, The Offing, The Rumpus, Booth, Word Riot, Hobart, and she is a 2x Pushcart Prize Nominee. She currently serves as a nonfiction editor for Sweet: A Literary Confection and lives in Tampa, Florida, where she teaches composition and creative writing at USF. </p>
+      <p>TypeNerd is completing an MFA at the University of South Florida, where he writes nonfiction, poetry, and comics. His work has been published in Brevity, New Delta Review, The Offing, The Rumpus, Booth, Word Riot, Hobart, and she is a 2x Pushcart Prize Nominee. He currently serves as a nonfiction editor for Sweet: A Literary Confection and lives in Tampa, Florida, where she teaches composition and creative writing at USF. </p>
     </div>
   </section>
 <!-- Publications page -->
@@ -234,13 +234,13 @@ img {
 <!-- Contact Page -->
   <section data-page-name="contact" class="page" id="email">
   <p>For any &amp; all inquiries, please feel free to contact me below.</p>
-<p><a href="mailto:phuk.yoo@protonmail.com/">em@il me</a></p>
+<p><a href="mailto:typenerd@mail.com/">em@il me</a></p>
     <p></p>
   </section>
 
   <!-- Loading -->
   <div class="loading">
-    <h1 class="loading-title">welcome!</h1>
+    <h1 class="loading-title">loading...</h1>
     <div class="loading-progress"></div>
   </div>
   
