--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ img {
   <section data-page-name="about" class="page default">
 
     <div class="about-me">
-      <p>TypeNerd is completing an MFA at the University of South Florida, where he writes nonfiction, poetry, and comics. His work has been published in Brevity, New Delta Review, The Offing, The Rumpus, Booth, Word Riot, Hobart, and she is a 2x Pushcart Prize Nominee. He currently serves as a nonfiction editor for Sweet: A Literary Confection and lives in Tampa, Florida, where she teaches composition and creative writing at USF. </p>
+      <p>TypeNerd is completing an MFA at the University of South Florida, where he writes nonfiction, poetry, and comics. His work has been published in Brevity, New Delta Review, The Offing, The Rumpus, Booth, Word Riot, Hobart, and he is a 2x Pushcart Prize Nominee. He currently serves as a nonfiction editor for Sweet: A Literary Confection and lives in Tampa, Florida, where he teaches composition and creative writing at USF. </p>
     </div>
   </section>
 <!-- Publications page -->
